# agno-agui-test

./: .gitignore  README.md  compose.yaml
agents/: .env.example  dev.Dockerfile  pyproject.toml
agents/src/: coding_agent.py  main.py  main_backup.py  telemetry.py
agents/src/agents/: company_news_agent.py  investment_advisor_team.py  investment_advisor_workflow.py  stock_price_agent.py  stock_summary_agent.py
agents/src/agents/util/: __init__.py  agent_util.py
agents/src/lib/app/: base.py  utils.py
agents/src/lib/app/agui/: app.py  async_router.py  sync_router.py  utils.py
ui/: dev.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
ui/src/app/: layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
