[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.8",
    "agno>=1.7.9",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "langfuse>=3.2.1",
    "openai>=1.98.0",
    "openinference-instrumentation-agno>=0.1.10",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
